# lookflex

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
apps/backend/: Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: a1b2c3d4e5f6_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: auth.py
apps/backend/app/core/: config.py  deps.py  redis.py  security.py
apps/backend/app/db/models/: __init__.py  chart.py  dashboard.py  datasource.py  enums.py  filter.py  formatting.py  notification.py  system.py  user.py  view_config.py
apps/backend/app/repositories/: user_repository.py
apps/backend/app/schemas/: auth.py  common.py  user.py
apps/backend/app/services/: auth_service.py  email_service.py
docs/: ai-guidelines.md  api-plan.md  api.md  infra.md  testing.md
docs/tests/: 01-auth.md
infra/nginx/: Dockerfile  nginx.conf
infra/nginx/conf.d/: local.conf  prod.conf
infra/postgres/init/: 00_create_extensions.sql
infra/redis/: redis.conf
